Bug 446651 - `Window > Workpaces` menu does not properly filter out deleted workspaces.
Summary: `Window > Workpaces` menu does not properly filter out deleted workspaces.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-07 22:48 UTC by Eoin O'Neill
Modified: 2021-12-14 02:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2021-12-07 22:48:45 UTC
SUMMARY
Deleting a workspace and going to `Window > Workspaces` still allows you to switch to the deleted workspace. 


STEPS TO REPRODUCE
1.  Open workspace chooser, delete `Storyboarding` entry (or any other entry)
2.  Open `Window > Workspaces` menu

OBSERVED RESULT
`Storyboarding` still shows up and can be switched to. 

EXPECTED RESULT
`Storyboarding` should not show up in menu.
Comment 1 Emmet O'Neill 2021-12-14 02:44:01 UTC
Git commit 06b81b349d78204fbe66d3c15b42dc4c8357f6ed by Emmet O'Neill.
Committed on 14/12/2021 at 02:42.
Pushed by emmetoneill into branch 'krita/5.0'.

Resources: Window > Workspace menu now updates on model change.

M  +2    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/06b81b349d78204fbe66d3c15b42dc4c8357f6ed
Comment 2 Emmet O'Neill 2021-12-14 02:45:35 UTC
Git commit cdf5484c0717001ab80fa10bb4a72aa780a24e38 by Emmet O'Neill.
Committed on 14/12/2021 at 02:45.
Pushed by emmetoneill into branch 'master'.

Resources: Window > Workspace menu now updates on model change.


(cherry picked from commit 06b81b349d78204fbe66d3c15b42dc4c8357f6ed)

M  +2    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/commit/cdf5484c0717001ab80fa10bb4a72aa780a24e38