Resources: Window > Workspace menu now updates on model change.

BUG:446651